--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="new1.html">Click here</a>
             <br>
             I want to say <br />
-            many thinks but, <br />
+             thinks but, <br />
             i can't express so i made <br />
             this for you
           </p>
@@ -27,7 +27,7 @@
       <div class="top"></div>
       <div class="shadow"></div>
       <div class="text1">
-        <h2>Hey! Listen I Have Something For You</h2>
+        <h2>Hey Siddhi! Listen I Have Something For You</h2>
       </div>
     </div>
   </body>
