--- a/new1.html
+++ b/new1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section class="animation-box">
-      <div class="first-text">In the short time we've been talking, your laughter has become the melody I look forward to every day.We have been strangers than too we became friends and many things to come let see</div>
+      <div class="first-text">In just  3 4 day's we've been talking, your laughter has become the melody I look forward to every day.We have been strangers than too we became friends and many things to come let see</div>
       <div class="second-text">
         My favorite part of every day is the time I get to spend with you.Your voice add so much happiness to my day, like little drops of joy.
       </div>
